--- a/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/AssessmentMonitor.cshtml
@@ -88,7 +88,7 @@
 @{
     Html.RenderAction("InstanceSelection", "ProjectMonitor");
 }
-<div style="margin-top:20px">
+<div style="margin-top:20px;">
     @*<table id="jqGrid"></table>
         <div id="jqGridPager"></div>*@
     @{
