--- a/ProAcc/Views/IssueTrack/IndexPage.cshtml
+++ b/ProAcc/Views/IssueTrack/IndexPage.cshtml
@@ -7,58 +7,61 @@
 <link href="~/Asset/Scripts/Datatable/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
 <script src="~/Asset/Scripts/Datatable/jquery.dataTables.min.js"></script>
 <script src="~/Asset/Scripts/Datatable/dataTables.bootstrap4.min.js"></script>
-<a class="card-title">Issue List</a>
-<hr />
-<table class="table"  id="tblIssue">
-   
-    <thead>
-        <tr>
-            <th>IssueID</th>
-            <th style="width:130px">Issue Name</th>
-            <th style="width:89px">Phase</th>
-            <th>Task</th>
-            <th>Assigned</th>
-            <th style="width:130px">Status</th>
-            <th style="width:89px">Created Date</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in ViewBag.ITM)
-        {
-        <tr>
-            <td>
-                <a class="txtG" value="@item.IssueID">@item.IssueID</a>
-            </td>
-            <td>
-                <a class="txtG" value="@item.IssueName">@item.IssueName</a>
-            </td>
-            <td>
-                <a class="txtG" value="@item.Phase">@item.Phase</a>
-            </td>
-            <td>
-                <a class="txtG" value="@item.Task">@item.Task</a>
-            </td>
-            <td>
-                <a class="txtG" value="@item.Assigned">@item.Assigned</a>
-            </td>
-            <td>
-                <a class="txtG" value="@item.Status">@item.Status</a>
-            </td>
-            <td>
-                <a class="txtG" value="@item.StartDate">@item.StartDate.ToString("dd/MM/yyyy")</a>
-            </td>           
-            <td>
-                @if (item.Status != "Completed")
-                {
-                    <a class="fa fa-edit" data-placement="top" href="@Url.Action("GetIssueTrackById", "IssueTrack", new { id = item.Issuetrack_Id })"></a>
-                }
-            </td>
-            
-        </tr>
-        }
-    </tbody>
-</table>
+<div style="max-width:99.5%;">
+    <a class="card-title">Issue List</a>
+    <hr />
+    <table class="table" id="tblIssue">
+
+        <thead>
+            <tr>
+                <th>IssueID</th>
+                <th style="width:130px">Issue Name</th>
+                <th style="width:89px">Phase</th>
+                <th>Task</th>
+                <th>Assigned</th>
+                <th style="width:130px">Status</th>
+                <th style="width:89px">Created Date</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in ViewBag.ITM)
+            {
+                <tr>
+                    <td>
+                        <a class="txtG" value="@item.IssueID">@item.IssueID</a>
+                    </td>
+                    <td>
+                        <a class="txtG" value="@item.IssueName">@item.IssueName</a>
+                    </td>
+                    <td>
+                        <a class="txtG" value="@item.Phase">@item.Phase</a>
+                    </td>
+                    <td>
+                        <a class="txtG" value="@item.Task">@item.Task</a>
+                    </td>
+                    <td>
+                        <a class="txtG" value="@item.Assigned">@item.Assigned</a>
+                    </td>
+                    <td>
+                        <a class="txtG" value="@item.Status">@item.Status</a>
+                    </td>
+                    <td>
+                        <a class="txtG" value="@item.StartDate">@item.StartDate.ToString("dd/MM/yyyy")</a>
+                    </td>
+                    <td>
+                        @if (item.Status != "Completed")
+                        {
+                            <a class="fa fa-edit" data-placement="top" href="@Url.Action("GetIssueTrackById", "IssueTrack", new { id = item.Issuetrack_Id })"></a>
+                        }
+                    </td>
+
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
 
 <script type="text/javascript">
 
