--- a/ProAcc/Views/ProjectMonitor/Monitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/Monitor.cshtml
@@ -7,7 +7,7 @@
     document.body.style.zoom = "90%";
     
     $(document).ready(function () {
-        $(".app-main__outer").css("height", "595px");
+        $(".app-main_Scroll").css("height", "calc(100vh - 57px)");
         //var PhaseId= 
         //debugger;
        // LoadTable(1);
