--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -92,6 +92,17 @@
 }
     </style>
     <style>
+
+        .app-main_Scroll {
+            overflow-y: auto;
+            height: calc(100vh - 125px);
+        }
+        .app-main__outer {
+            overflow: auto;
+        }
+        .app-main__inner {
+            padding-left: 15px;
+        }
         /* ScrollBar */
         /* width */
         ::-webkit-scrollbar {
@@ -111,7 +122,7 @@
             -webkit-border-radius: 10px;
             border-radius: 10px;
             /*background: rgba(255,0,0,0.8);*/
-            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,1);
         }
 
             /* Handle on hover */
@@ -363,7 +374,7 @@
 
                                     <a href="@Url.Action("PMTask", "ProjectMonitor")">
                                         <!-- <i class="metismenu-icon pe-7s-home"></i> -->
-                                        <i class="metismenu-icon fa fa-home"></i>
+                                        <i class="metismenu-icon fa fa-american-sign-language-interpreting"></i>
                                         PMTask Monitor
                                     </a>
                                 </li>
@@ -710,7 +721,7 @@
                             {
                                 <li>
                                     <a href="#">
-                                        <i class="metismenu-icon fa fa-flag-checkered"></i>
+                                        <i class="metismenu-icon fa fa-bullhorn"></i>
                                         Issue Track
                                         <i class="metismenu-state-icon fa fa-caret-down caret-left"></i>
                                     </a>
@@ -749,11 +760,13 @@
                     </div>
                 </div>
             </div>
-            <div class="app-main__outer" style="overflow:auto;height:calc(100vh - 70px);">
-                <div class="app-main__inner">
-                    <hr />
-                    @RenderBody()
-                    @RenderSection("scripts", required: false)
+            <div class="app-main__outer">
+                <div  class="app-main_Scroll">
+                    <div class="app-main__inner">
+                        <hr />
+                        @RenderBody()
+                        @RenderSection("scripts", required: false)
+                    </div>
                 </div>
                 <div class="app-wrapper-footer">
                     <div class="app-footer">
