--- a/ProAcc/Views/Role/_RoleIndex.cshtml
+++ b/ProAcc/Views/Role/_RoleIndex.cshtml
@@ -86,6 +86,7 @@
                 $("#btnRoleCreate").hide();
                 $("#RoleCreation").hide();
                 $("#RoleUpdation").show();
+                $(".app-main_Scroll").animate({ scrollTop: 0 }, 1000);
 
             },
             error: function (err) {
