--- a/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
@@ -15,7 +15,7 @@
 <a class="card-title" id="activityCreation">Activity Creation</a>
 <a class="card-title" style="display:none" id="activityUpdation">Activity Updation</a>
 <hr />
-<div style="padding:1em;">
+<div style="padding:1em;" id="__Activity">
     <div class="row">
         <div class="col-6">
 
